feat: Create loglibraries required by EGO framework through templates #693
